--- a/at.medevit.elexis.at.releng/pom.xml
+++ b/at.medevit.elexis.at.releng/pom.xml
@@ -35,7 +35,41 @@
 
 	<properties>
 		<tycho-version>0.22.0</tycho-version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<repo_name>elexis.3.austria</repo_name>
+		<repo_variant>snapshot</repo_variant>
+		<useBranch>master</useBranch>
+		<nonElexisP2variant>snapshot</nonElexisP2variant>
+		<ROOT>${project.basedir}/compositeRepository</ROOT>
 	</properties>
+	<profiles>
+		<profile>
+			<id>prerelease</id>
+			<activation>
+				<property>
+					<name>repo_variant</name>
+					<value>prerelease</value>
+				</property>
+			</activation>
+			<properties>
+				<nonElexisP2variant>release</nonElexisP2variant>
+				<useBranch>release</useBranch>
+			</properties>
+		</profile>
+		<profile>
+			<id>release</id>
+			<activation>
+				<property>
+					<name>repo_variant</name>
+					<value>release</value>
+				</property>
+			</activation>
+			<properties>
+				<nonElexisP2variant>release</nonElexisP2variant>
+				<useBranch>release</useBranch>
+			</properties>
+		</profile>
+	</profiles>
 
 	<repositories>
 		<repository>
