--- a/at.medevit.elexis.at.releng/pom.xml
+++ b/at.medevit.elexis.at.releng/pom.xml
@@ -142,6 +142,51 @@
 					</environments>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>com.google.code.maven-replacer-plugin</groupId>
+				<artifactId>replacer</artifactId>
+				<version>1.5.2</version>
+				<executions>
+					<execution>
+						<phase> generate-sources </phase>
+						<goals>
+							<goal>replace</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<outputDir>..</outputDir>
+					<basedir>${project.basedir}</basedir>
+					<filesToInclude>repo.properties</filesToInclude>
+					<replacements>
+						<replacement>
+							<token>project_name</token>
+							<value>${project.name}</value>
+						</replacement>
+						<replacement>
+							<token>project_version</token>
+							<value>${project.version}</value>
+						</replacement>
+						<replacement>
+							<token>buildQualifier</token>
+							<value>${groovyBuildQualifier}</value>
+						</replacement>
+						<replacement>
+							<token>unqualifiedVersion</token>
+							<value>${unqualifiedVersion}</value>
+						</replacement>
+						<replacement>
+							<token>repo_name</token>
+							<value>${repo_name}</value>
+						</replacement>
+						<replacement>
+							<token>repo_variant</token>
+							<value>${repo_variant}</value>
+						</replacement>
+					</replacements>
+				</configuration>
+			</plugin>
+
 		</plugins>
 	</build>
 </project>
