--- a/at.medevit.elexis.at.updateSite/pom.xml
+++ b/at.medevit.elexis.at.updateSite/pom.xml
@@ -1,12 +1,61 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <artifactId>at.medevit.elexis.at.updateSite</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <packaging>eclipse-repository</packaging>
-  <parent>
-  	<groupId>at.medevit.elexis.at</groupId>
-  	<artifactId>at.medevit.elexis.at.releng</artifactId>
-  	<version>3.0.0-SNAPSHOT</version>
-  	<relativePath>../at.medevit.elexis.at.releng</relativePath>
-  </parent>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<artifactId>at.medevit.elexis.at.updateSite</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<packaging>eclipse-repository</packaging>
+	<parent>
+		<groupId>at.medevit.elexis.at</groupId>
+		<artifactId>at.medevit.elexis.at.releng</artifactId>
+		<version>3.0.0-SNAPSHOT</version>
+		<relativePath>../at.medevit.elexis.at.releng</relativePath>
+	</parent>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>com.google.code.maven-replacer-plugin</groupId>
+				<artifactId>replacer</artifactId>
+				<version>1.5.2</version>
+				<executions>
+					<execution>
+						<phase> generate-sources </phase>
+						<goals>
+							<goal>replace</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<outputDir>..</outputDir>
+					<basedir>${project.basedir}/info</basedir>
+					<filesToInclude>repo.properties</filesToInclude>
+					<replacements>
+						<replacement>
+							<token>project_name</token>
+							<value>${project.name}</value>
+						</replacement>
+						<replacement>
+							<token>project_version</token>
+							<value>${project.version}</value>
+						</replacement>
+						<replacement>
+							<token>buildQualifier</token>
+							<value>${groovyBuildQualifier}</value>
+						</replacement>
+						<replacement>
+							<token>unqualifiedVersion</token>
+							<value>${unqualifiedVersion}</value>
+						</replacement>
+						<replacement>
+							<token>repo_name</token>
+							<value>${repo_name}</value>
+						</replacement>
+						<replacement>
+							<token>repo_variant</token>
+							<value>${repo_variant}</value>
+						</replacement>
+					</replacements>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
