--- a/at.medevit.elexis.at.releng/pom.xml
+++ b/at.medevit.elexis.at.releng/pom.xml
@@ -75,27 +75,27 @@
 		<repository>
 			<id>elexis-3-core_release</id>
 			<layout>p2</layout>
-			<url>http://download.elexis.info/elexis.3.core/release/</url>
+			<url>http://download.elexis.info/elexis.3.core/${repo_variant}/</url>
 		</repository>
 		<repository>
 			<id>elexis-3-base_release</id>
 			<layout>p2</layout>
-			<url>http://download.elexis.info/elexis.3.base/release/</url>
+			<url>http://download.elexis.info/elexis.3.base/${repo_variant}/</url>
 		</repository>
 		<repository>
 			<id>mirror4elexis</id>
 			<layout>p2</layout>
-			<url>http://download.elexis.info/mirror.4.elexis/snapshot/</url>
+			<url>http://download.elexis.info/mirror.4.elexis/${repo_variant}/</url>
 		</repository>
 		<repository>
 			<id>3rdparty</id>
 			<layout>p2</layout>
-			<url>http://download.elexis.info/elexis.3.3rdparty.libraries/snapshot/</url>
+			<url>http://download.elexis.info/elexis.3.3rdparty.libraries/${repo_variant}/</url>
 		</repository>
 		<repository>
 			<id>orbit</id>
 			<layout>p2</layout>
-			<url>http://download.eclipse.org/tools/orbit/downloads/drops/R20130517111416/repository/</url>
+			<url>http://download.eclipse.org/tools/orbit/downloads/drops/R20150124073747/repository/</url>
 		</repository>
 	</repositories>
 
