--- a/at.medevit.elexis.kassen.core/plugin.xml
+++ b/at.medevit.elexis.kassen.core/plugin.xml
@@ -4,7 +4,7 @@
    <extension
          point="org.eclipse.ui.preferencePages">
       <page
-            category="/ch.elexis.Leistungscodes/"
+            category="ch.elexis.Leistungscodes"
             class="at.medevit.elexis.kassen.core.ui.GeneralPreferencePage"
             id="at.medevit.elexis.kassen.core.Krankenkassen"
             name="Krankenkassen">
