--- a/at.medevit.elexis.at.updateSite/pom.xml
+++ b/at.medevit.elexis.at.updateSite/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>at.medevit.elexis.at.updateSite</artifactId>
-	<version>0.1.5</version>
+	<version>1.0.0-SNAPSHOT</version>
 	<packaging>eclipse-repository</packaging>
 	<parent>
 		<groupId>at.medevit.elexis.at</groupId>
